# forward-test

./: Makefile  README.md  bench.md  pyproject.toml
scripts/: __init__.py  bench.py  profile.py
src/forward_monitor/: __init__.py  __main__.py  app.py  config_store.py  deduplication.py  discord.py  filters.py  formatting.py  models.py  telegram.py  utils.py
stubs/pytest_asyncio/: __init__.pyi
stubs/yaml/: __init__.pyi
tests/: test_app.py  test_attachments_style.py  test_config_store.py  test_deduplication.py  test_filters.py  test_formatting.py  test_formatting_escape.py  test_rate_limiter.py  test_send_formatted.py  test_telegram_commands.py  test_telegram_controller.py  test_utils.py
