[project]
name = "forward-monitor"
version = "0.1.0"
description = "Discord to Telegram monitor"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "aiohttp>=3.9,<4.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8",
    "pre-commit>=3.6",
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_optional = true
strict_equality = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
allow_redefinition = false
show_error_codes = true
mypy_path = ["stubs"]
